added base menu

--- a/example/menu.html
+++ b/example/menu.html
@@ -2,6 +2,7 @@
  .menu-body {
   max-width: 680px;
   margin: 0 auto;
+  padding: 10;
   display: block;
   color: rgb(92, 92, 92);
 }
@@ -46,7 +47,7 @@
 <div class="menu-body">
  <div class="menu-section">
   <h2 class="menu-section-title">
-   Vegetarian
+   Chinese
   </h2>
   <div class="menu-item">
    <div class="menu-item-name">
@@ -56,269 +57,109 @@
     $8
    </div>
    <div class="menu-item-description">
-    Cabbage, celery, carrots, green onions and Chinese noodles in a crispy wonton wrapper.(V)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Chilli Gobi
-   </div>
-   <div class="menu-item-price">
-    $10
-   </div>
-   <div class="menu-item-description">
-    Fresh cauliflower prepared with fresh herbs and chili peppers.(V)(GF)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Chilli Tofu
-   </div>
-   <div class="menu-item-price">
-    $10
-   </div>
-   <div class="menu-item-description">
-    Grilled tofu prepared with fresh herbs and chili peppers.(V)(GF)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Gobi Manchurian
-   </div>
-   <div class="menu-item-price">
-    $13
-   </div>
-   <div class="menu-item-description">
-    Crispy cauliflower in savory Manchurian sauce.(V)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Sweet &amp; Sour Vegetable
-   </div>
-   <div class="menu-item-price">
-    $13
-   </div>
-   <div class="menu-item-description">
-    Fresh vegetables mixed with pineapples in a sweet and source sauce.(V)(GF)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Manchurian Vegetable
-   </div>
-   <div class="menu-item-price">
-    $13
-   </div>
-   <div class="menu-item-description">
-    Round vegetable dumpling balls in a savory Manchurian sauce.(V)
+    Cabbage, celery, carrots, green onions and Chinese noodles in a crispy wonton wrapper.(Vegan)
    </div>
   </div>
  </div>
  <div class="menu-section">
   <h2 class="menu-section-title">
-   Chicken
+   Japanese
   </h2>
   <div class="menu-item">
    <div class="menu-item-name">
-    Lollipop Chicken Wings
-   </div>
-   <div class="menu-item-price">
-    $9
-   </div>
-   <div class="menu-item-description">
-    (V)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Chilli Chicken
-   </div>
-   <div class="menu-item-price">
-    $13
-   </div>
-   <div class="menu-item-description">
-    Tender pieces of chicken prepared with fresh herbs and chili peppers.(GF)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Hot Garlic Chicken
-   </div>
-   <div class="menu-item-price">
-    $13
-   </div>
-   <div class="menu-item-description">
-    Sauteed chicken breast in a spicy garlic sauce.
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Broccoli Chicken
-   </div>
-   <div class="menu-item-price">
-    $13
-   </div>
-   <div class="menu-item-description">
-    Sliced chicken and broccoli in a tasty garlic sauce.(GF)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Sweet &amp; Sour Chicken
-   </div>
-   <div class="menu-item-price">
-    $13
-   </div>
-   <div class="menu-item-description">
-    Diced chicken breast lightly stir-fried with a tangy sweet and spice sauce
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Manchurian Chicken
-   </div>
-   <div class="menu-item-price">
-    $13
-   </div>
-   <div class="menu-item-description">
-    Tender pieces of chicken in a savory Manchurian sauce.
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Basil Ginger Chicken
-   </div>
-   <div class="menu-item-price">
-    $13
-   </div>
-   <div class="menu-item-description">
-    Stir-fried sliced chicken breast with basil and garlic sauce.(GF)
-   </div>
-  </div>
- </div>
- <div class="menu-section">
-  <h2 class="menu-section-title">
-   Shrimp
-  </h2>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Hot Garlic Shrimp
-   </div>
-   <div class="menu-item-price">
-    $16
-   </div>
-   <div class="menu-item-description">
-    Large gourmet shrimp in a spicy garlic sauce.
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Schezwan Shrimp
-   </div>
-   <div class="menu-item-price">
-    $16
-   </div>
-   <div class="menu-item-description">
-    Gourmet shrimp sauteed with fresh vegetables in a savory schezwan sauce.
-   </div>
-  </div>
- </div>
- <div class="menu-section">
-  <h2 class="menu-section-title">
-   Rice
-  </h2>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    White Basmati Rice
+    Sushi
    </div>
    <div class="menu-item-price">
     $4
    </div>
    <div class="menu-item-description">
-    (V)(GF)
+    Roll
    </div>
   </div>
   <div class="menu-item">
    <div class="menu-item-name">
-    Brown Basmati Rice
-   </div>
-   <div class="menu-item-price">
-    $5
-   </div>
-   <div class="menu-item-description">
-    (V)(GF)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Vegetable Fried Rice
+    Ramen
    </div>
    <div class="menu-item-price">
     $12
    </div>
    <div class="menu-item-description">
-    Basmati rice stir-fried and seasoned to perfection with fresh carrots, scallions and other vegetables.(V)(GF)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Chicken Fried Rice
-   </div>
-   <div class="menu-item-price">
-    $13
-   </div>
-   <div class="menu-item-description">
-    Basmati rice stir-fried and seasoned to perfection with shredded piece of tender chicken.(GF)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Shrimp Fried Rice
-   </div>
-   <div class="menu-item-price">
-    $16
-   </div>
-   <div class="menu-item-description">
-    Basmati rice stir-friend with gourmet baby shrimp, fresh carrots, scallions and other vegetables.(GF)
+    Naruto(Vegan)
    </div>
   </div>
  </div>
  <div class="menu-section">
   <h2 class="menu-section-title">
-   Noodles
+   Vietnamese
   </h2>
   <div class="menu-item">
    <div class="menu-item-name">
-    Vegetable Hakka Noodles
+    Pho
    </div>
    <div class="menu-item-price">
-    $12
+    $10
    </div>
    <div class="menu-item-description">
-    Hakka style noodles with fresh vegetables.(V)
+    Beef
+   </div>
+  </div>
+ </div>
+ <div class="menu-section">
+  <h2 class="menu-section-title">
+   Korean
+  </h2>
+  <div class="menu-item">
+   <div class="menu-item-name">
+    Koean BBQ
+   </div>
+   <div class="menu-item-price">
+    $35
+   </div>
+   <div class="menu-item-description">
+    Hot
+   </div>
+  </div>
+ </div>
+ <div class="menu-section">
+  <h2 class="menu-section-title">
+   Mongolian
+  </h2>
+  <div class="menu-item">
+   <div class="menu-item-name">
+    Hot Pot
+   </div>
+   <div class="menu-item-price">
+    $25
+   </div>
+   <div class="menu-item-description">
+    Shabu Shabu
+   </div>
+  </div>
+ </div>
+ <div class="menu-section">
+  <h2 class="menu-section-title">
+   International
+  </h2>
+  <div class="menu-item">
+   <div class="menu-item-name">
+    Dumplings
+   </div>
+   <div class="menu-item-price">
+    $10
+   </div>
+   <div class="menu-item-description">
+    Chopsticks(Vegan)(Gluten-Free)
    </div>
   </div>
   <div class="menu-item">
    <div class="menu-item-name">
-    Chicken Hakka Noodles
+    White / Brown Rice
    </div>
    <div class="menu-item-price">
-    $13
+    $5
    </div>
    <div class="menu-item-description">
-    Hakka style noodles with tender pieces of chicken.
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Chilli Garlic Noodles
-   </div>
-   <div class="menu-item-price">
-    $13
-   </div>
-   <div class="menu-item-description">
-    Hakka style noodles with garlic and fresh chillis and spices.
+    Bowl(Vegan)(Gluten-Free)
    </div>
   </div>
  </div>
@@ -328,35 +169,24 @@
   </h2>
   <div class="menu-item">
    <div class="menu-item-name">
-    Mango Lassi
-   </div>
-   <div class="menu-item-price">
-    $5
-   </div>
-   <div class="menu-item-description">
-    Traditional cold and refreshing yogurt based drink made with mango pulp.(GF)
-   </div>
-  </div>
-  <div class="menu-item">
-   <div class="menu-item-name">
-    Poland Spring Water
+    Tea of the house
    </div>
    <div class="menu-item-price">
     $2
    </div>
    <div class="menu-item-description">
-    (V)(GF)
+    Green tea(Vegan)(Gluten-Free)
    </div>
   </div>
   <div class="menu-item">
    <div class="menu-item-name">
-    Soda
+    Boba
    </div>
    <div class="menu-item-price">
-    $2
+    $4
    </div>
    <div class="menu-item-description">
-    (V)(GF)
+    Black Pearls(Vegan)(Gluten-Free)
    </div>
   </div>
  </div>
